Replace logic from view.py, to api_views.py and rest_api.py
